--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -1,24 +1,22 @@
 If our clusters represent biological states distinct from tissue of origin, they
 may have different prognoses within cancer types or across all cancers. These
-analyses are limited by confounding factors of age and stage at diagnosis, sex,
+analyses are limited by confounding factors of age, stage at diagnosis, sex,
 ethnicity, and tissue-specific disease progression. To explore these ideas, we
 used Bayesian inference to test models of survival using public longevity data
-from the CDC. Our model estimates the effect of cancer type and cluster-specific
+from the CDC. The estimates the effect of cancer type and cluster-specific
 cancer effects independently, resulting in a cancer and cluster-specific
 estimate of the aging rate multiplier, $k$.
 
-To illustrate the model, we simulate survival time curves
-for four related groups (**figure 5A**). We start with a cohort of women aged 30 and show their
-expected survival (light blue). By setting their cancer rate multiplier to $k=2$
-we can simulate the effect of a moderately deadly cancer (yellow). Compare this
-to a randomly selected group of women ranging in age from 30 to 70 years old
-(dark blue). Immediately the survival curve changes due to the mixture of ages,
-without any malignancy. Adding a $k=2$ malignancy further reduces expected
-lifespan (red). We can see that for different tissues, simply due to the change
-in distribution of age-at-diagnosis, we should expect equally deadly cancers to
-have *different* survival curves. The model takes this into account and the
-aggressiveness of the cancer can be estimated accurately without the confounding
-effect of age.
+To illustrate the model, we simulate survival four related groups (**figure
+5A**). We start with a cohort of women aged 30 and show expected survival (light
+blue). By setting cancer rate multiplier to $k=2$ we simulate the effect of a
+moderately deadly cancer (yellow). Compare this to randomly selected women
+ranging from 30 to 70 years old (dark blue). Immediately, survival changes due
+to the mixture of ages, without malignancy. Adding a $k=2$ malignancy further
+reduces expected lifespan (red). Hence, due to the change in distribution of
+age-at-diagnosis, we expect equally deadly cancers to have *different* survival
+curves. The model takes this into account and cancer aggressiveness is estimated
+accurately without the confounding effect of age.
 
 ```{r, results='asis'}
 cat("\\newpage")
@@ -28,20 +26,19 @@ cat("\\newpage")
 ```{r child='../code/survival/figure5.Rmd'}
 ```
 
-**Figure 5: Comparison of different cancers, simulated and actual results.** To
-illustrate the risk model, we compare survival of four simulated cohorts. A) A
-group consisting of randomly selected 30 year old women (light blue) vs. an
-equal sized group of 30 year old women with cancer, $k = 2$ (light orange).
-Compare a randomly selected group of people with ages uniformly distributed from
-30 to 70 (dark blue) and a randomly selected group with uniformly distributed
-ages and cancer $k = 2$ (dark orange). B,C,D,E) Compare random group with
-correct age distribution for the given cancer (turqoise) to the model predicted
-survival for the given average k (blue) and the actual survival for the patients
-in our dataset (orange). Differences with actual data are likely due to a
-mixture of cluster identities which we exclude from these simulations for
-simplicity. F) Effects are compared between cancer type by showing the
-probability density for the posterior value of the $k_{tis}$ multiplier. Larger
-values correspond to decreased age-independent life expectancy.
+**Figure 5: Comparison of different cancers, simulated and actual results.**
+Comparison of survival in four simulated cohorts. A) A group consisting of
+randomly selected 30 year old women, unaffected (light blue) _vs._ cancer, 
+($k = 2$, light orange), another group consisting of random 30-70 year-old
+women, unaffecteds (dark blue) and cancer $k = 2$ (dark orange). B,C,D,E)
+Compare random group with correct age distribution for the given cancer
+(turqoise) to the model predicted survival for the given average k (blue) and
+the actual survival for the patients in our dataset (orange). Differences with
+actual data are likely due to a mixture of cluster identities which we exclude
+from these simulations for simplicity. F) Effects are compared between cancer
+type by showing the probability density for the posterior value of the $k_{tis}$
+multiplier. Larger values correspond to decreased age-independent life
+expectancy.
 
 ```{r, results='asis'}
 cat("\\newpage")
@@ -50,27 +47,27 @@ cat("\\newpage")
 We found that cancer types, as expected, have a range of prognoses relative to
 the general population. In **figure 5B-E** we see three particularly deadly
 cancers (Stomach:STAD, Glioblastoma:GBM, and Pancreatic:PAAD), and one cancer
-where diagnosis apparently decreases risk relative to background (Thyroid:
-THCA). Cancers with posterior probability for relative risk of less than 1 such
-as THCA should be interpreted carefully. This Bayesian model is a model for a
-state of information. The information that a person is diagnosed with cancer may
-lead us to expect that they will live a shorter time than the general population
-of matched age (k > 1), or a longer time than the general population of matched
-age (k < 1). A shorter prognosis could result from the cancer being aggressive,
-injuring the body and causing death. By contrast, a longer prognosis may result
-from the cancer being relatively mild, and therefore diagnosis could be an
-informational signal that the patient is health conscious, with the comparison
-group having more people whose cancers go undiagnosed. It is important to note
-therefore that the diagnosis can increase our expectation of life relative to
-the comparison group, even if it decreases the expectation of life of the
-individual relative to the counterfactual where they did not have cancer.
+where diagnosis decreases risk relative to background (Thyroid: THCA). Cancers
+with posterior probability for relative risk of less than 1 such as THCA should
+be interpreted carefully. This Bayesian model is for a state of information. The
+information that a person is diagnosed with cancer may lead us to expect shorter
+survival than the general population of matched age (k > 1), or longer survival
+than the general population of matched age (k < 1). Shorter prognosis could
+result from cancer aggressiveness, injuring the body and causing death. By
+contrast, longer prognosis could result from the cancer being relatively mild,
+and therefore diagnosis could be an informational signal that the patient is
+health conscious, with the comparison group having more people whose cancers go
+undiagnosed. It is important to note therefore that the diagnosis can increase
+our expectation of life relative to the comparison group, even if it decreases
+the expectation of life of the individual relative to the counterfactual where
+they did not have cancer.
 
-The degree to which a given cancer accelerates aging can be determined by the
-$k_{tis}$ multiplier (**figure 5F**) multiplied by the cluster modifier $k_{cl}$
-(**figure 6**). Looking at the tissue specific multiplier, the least deadly was
-prostate cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a
-risk multiplier of between 15 and 22 relative to the background risk of death in
-the population. This undoubtedly is influenced by the fact that relatively young
+The degree to which cancer accelerates aging can be determined by the $k_{tis}$
+multiplier (**figure 5F**) multiplied by the cluster modifier $k_{cl}$ (**figure
+6**). Looking at the tissue specific multiplier, the least deadly was prostate
+cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a risk
+multiplier of between 15 and 22 relative to the background risk of death in the
+population. This undoubtedly is influenced by the fact that relatively young
 patients are affected by GBM and that it is extremely deadly. Among the
 deadliest cancers outside of GBM were stomach (STAD), melanoma (SKCM) and
 pancreatic (PAAD) cancers. Apart from these top 4 cancers which ranged from 6-22
@@ -87,9 +84,9 @@ cat("\\newpage")
 ```
 
 **Figure 6 Cluster specific $k_{cl}$ values for each cancer type.** The overall
-$k$ value is the product of $k_{tis} \times k_{cl}$. The cluster-specific value
-represents the relative aggressiveness of each cluster within the cancer type.
-Alpha transparency (α) is set to reflect varying confidence in the posterior
+$k$ value is the product of $k_{tis} \times k_{cl}$. The cluster-specific $k$
+represents relative aggressiveness of each cluster within cancer type. Alpha
+transparency (α) is set to reflect varying confidence in the posterior
 distribution when the number of observations is N<10, α = 0.1; N<25, α = 0.5; N
 ≥ 25 α = 1.0.
 
@@ -109,10 +106,9 @@ mortalities in the data to make an estimate (as expected for PRAD and THCA) or
 two few samples, period. We did not observe cluster-specific trends that held
 true across cancer types, which could result from different cancers having
 different standards of care for example. In support of this interpretation, we
-also tested a factored model which considered both cancer type and each cluster
-independent of cancer type (not shown). Though we were able to successfully fit
-this model, it is a special case of the more general model where cluster and
-tissue independently affect longevity, and there is no reason to believe that
-cluster specific effects would necessarily remain constant across tissue types
-given how widely the patients vary across tissue types, drug and surgical
-treatments.
+also tested a factored model which considered both cancer type cluster
+independently. Though we were able to successfully fit this model, it is a
+special case of the more general model where cluster and tissue independently
+affect longevity, and there is no reason to believe that cluster specific
+effects would necessarily remain constant across tissue types given how widely
+the patients vary across tissue types, drug and surgical treatments.
