--- a/text/references.bib
+++ b/text/references.bib
@@ -642,3 +642,13 @@ Fitzgerald, R.C. and Scaffidi, P. and The Oesophageal Cancer Clinical and Molecu
   pmid = {31138277},
   doi = {10.1186/s13073-019-0648-4}
 }
+
+@article{hotnet2,
+  author = {Leiserson, M.D. and Vandin, F. and Wu, H. and Dobson, J.R. and Eldridge, J.V. and Thomas, J.L. and Papoutsaki, A. and Kim, Y. and Niu, B. and McLellan, M. and Lawrence, M.S. and Gonzales-Perez, A. and Tamborero, D. and Cheng, Y. and Ryslik, G.A. and Lopez-Bigas, N. and Getz, G. and Ding, L. and Raphael, B.J.},
+  title = {Pan-cancer network analysis identifies combinations of rare somatic mutations across pathways and protein complexes},
+  journal = {Nature Genetics},
+  volume = {47},
+  number = {2},
+  pages = {106--114},
+  doi = {doi:10.1038/ng.3168}
+}
